Updates from Overleaf

--- a/Latex/Files/effort.tex
+++ b/Latex/Files/effort.tex
@@ -26,7 +26,7 @@
         Misc Activities & 2 \\ \hline
     \end{tabular}
     \caption{Effort - Matteo Giovanni Paoli}
-    \label{tab:effotricci}
+    \label{tab:effotpaoli}
 \end{table}
 \subsection*{Samuele Grisoni}
 \begin{table}[H]
@@ -34,12 +34,12 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & X \\ \hline
-        Overall Description & X \\ \hline
-        Specific Requirements & X\\ \hline
-        Formal Analysis Using Alloy & X \\ \hline
-        Misc Activities & X \\ \hline
+        Introduction & 11\\ \hline
+        Overall Description & 15\\ \hline
+        Specific Requirements & 9\\ \hline
+        Formal Analysis Using Alloy & 16 \\ \hline
+        Misc Activities & 7\\ \hline
     \end{tabular}
     \caption{Effort - Samuele Grisoni}
-    \label{tab:effotricci}
+    \label{tab:effotgrisoni}
 \end{table}
