--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -20,7 +20,7 @@ In the meantime, Student\&Company will also provide Students and Companies with 
 This section defines the scope of the S\&C platform, highlighting the key features and functionalities that enable interactions among students, companies, and universities.
 The main features to provide in order to satisfy all the goals are the following:
 \begin{itemize}
-\item {\color{titleColor}Advertise Internship:}\\ Companies can publish internships offers that:
+\item {\color{titleColor}Advertise Internship:}\\ Companies can publish internship offers that:
     \begin{itemize}
         \item Students can spontaneously apply to;
         \item Recommendation process consider while looking for matches.
