--- a/Latex/DD_Chapters/6effort.tex
+++ b/Latex/DD_Chapters/6effort.tex
@@ -4,11 +4,11 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & 10 \\ \hline
-        Overall Description & 8 \\ \hline
-        Specific Requirements & 15\\ \hline
-        Formal Analysis Using Alloy & 10 \\ \hline
-        Misc Activities & 20 \\ \hline
+        Introduction & X \\ \hline
+        Overall Description & X \\ \hline
+        Specific Requirements & X\\ \hline
+        Formal Analysis Using Alloy & X \\ \hline
+        Misc Activities & 5 \\ \hline
     \end{tabular}
     \caption{Effort - Lorenzo Ricci}
     \label{tab:effotricci}
@@ -19,11 +19,11 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & 7 \\ \hline
-        Overall Description & 16 \\ \hline
-        Specific Requirements & 22\\ \hline
-        Formal Analysis Using Alloy & 13 \\ \hline
-        Misc Activities & 2 \\ \hline
+        Introduction & X \\ \hline
+        Overall Description & X \\ \hline
+        Specific Requirements & X\\ \hline
+        Formal Analysis Using Alloy & X \\ \hline
+        Misc Activities & X \\ \hline
     \end{tabular}
     \caption{Effort - Matteo Giovanni Paoli}
     \label{tab:effotpaoli}
@@ -34,11 +34,11 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & 11\\ \hline
-        Overall Description & 15\\ \hline
-        Specific Requirements & 9\\ \hline
-        Formal Analysis Using Alloy & 16 \\ \hline
-        Misc Activities & 7\\ \hline
+        Introduction & X\\ \hline
+        Overall Description & X\\ \hline
+        Specific Requirements & X\\ \hline
+        Formal Analysis Using Alloy & X \\ \hline
+        Misc Activities & X\\ \hline
     \end{tabular}
     \caption{Effort - Samuele Grisoni}
     \label{tab:effotgrisoni}
