Updates from Overleaf

--- a/Latex/DD.bib
+++ b/Latex/DD.bib
@@ -1,29 +1,10 @@
-@article{720574,
-  author={IEEE},
-  journal={IEEE Std 830-1998}, 
-  title={IEEE Recommended Practice for Software Requirements Specifications}, 
-  year={1998},
-  pages={1-40},
-  doi={10.1109/IEEESTD.1998.88286},
-  keywords      = {}}
-
-@misc{alloy_guide,
-  author       = {Alloy Team},
-  title        = {Alloy Analyzer Documentation},
-  year         = {2024},
-  url          = {https://alloy.readthedocs.io/en/latest/},
-  note         = {},
-  keywords      = {}
-}
-
-
 @misc{lucidchart,
   author       = {Lucid Software Inc.},
   title        = {Lucidchart - Online Diagram Software},
   year         = {2024},
   url          = {https://www.lucidchart.com},
   note         = {Purpose: used to realize all the diagrams along the documents},
-  keywords      = {tools}
+  keywords      = {usedtools}
 }
 
 @misc{mermaid,
@@ -32,7 +13,7 @@
   year         = {2024},
   url          = {https://mermaid-js.github.io/},
   note         = {Purpose: Used for generating diagrams and flowcharts directly from text or markdown-like syntax.},
-  keywords      = {tools}
+  keywords      = {usedtools}
 }
 
 
@@ -42,7 +23,7 @@
   year         = {2024},
   url          = {https://reactjs.org},
   note         = {Purpose: used to create the UI prototype},
-  keywords      = {tools}
+  keywords      = {usedtools}
 
 }
 
@@ -52,7 +33,107 @@
   year         = {2024},
   url          = {https://mui.com},
   note         = {Purpose: used to create the UI prototype},
-  keywords      = {tools}
+  keywords      = {usedtools}
 }
+
+@misc{react_testing_library,
+  author       = {React Testing Library Team},
+  title        = {React Testing Library - Simple and Complete Testing Utilities for React},
+  year         = {2024},
+  url          = {https://testing-library.com/docs/react-testing-library/intro/},
+  note         = {Purpose: used for testing React components},
+  keywords     = {tools}
+}
+
+@misc{framer_motion,
+  author       = {Framer Team},
+  title        = {Framer Motion - Production-Ready Motion Library for React},
+  year         = {2024},
+  url          = {https://www.framer.com/motion/},
+  note         = {Purpose: used for adding animations to the UI prototype},
+  keywords     = {tools}
+}
+
+@misc{spring_boot,
+  author       = {Spring Team},
+  title        = {Spring Boot - Framework for Building Java Applications},
+  year         = {2024},
+  url          = {https://spring.io/projects/spring-boot},
+  note         = {Purpose: used for back-end development},
+  keywords     = {tools}
+}
+
+@misc{maria_db,
+  author       = {MariaDB Foundation},
+  title        = {MariaDB - Open Source Database},
+  year         = {2024},
+  url          = {https://mariadb.org/},
+  note         = {Purpose: used as the database for the application},
+  keywords     = {tools}
+}
+
+@misc{hibernate,
+  author       = {Hibernate Team},
+  title        = {Hibernate - Java Framework for ORM and Persistence},
+  year         = {2024},
+  url          = {https://hibernate.org/},
+  note         = {Purpose: used for ORM and database interaction in the back-end},
+  keywords     = {tools}
+}
+
+@misc{firebase_authentication,
+  author       = {Firebase Team},
+  title        = {Firebase Authentication - Authenticate and Manage Users},
+  year         = {2024},
+  url          = {https://firebase.google.com/products/auth},
+  note         = {Purpose: used for user authentication},
+  keywords     = {tools}
+}
+
+@misc{firebase_cloud_messaging,
+  author       = {Firebase Team},
+  title        = {Firebase Cloud Messaging - Cross-Platform Messaging Solution},
+  year         = {2024},
+  url          = {https://firebase.google.com/products/cloud-messaging},
+  note         = {Purpose: used for sending notifications to devices},
+  keywords     = {tools}
+}
+
+@misc{junit,
+  author       = {JUnit Team},
+  title        = {JUnit - Testing Framework for Java},
+  year         = {2024},
+  url          = {https://junit.org/},
+  note         = {Purpose: used for unit testing Java components},
+  keywords     = {tools}
+}
+
+@misc{mockito,
+  author       = {Mockito Team},
+  title        = {Mockito - Java Mocking Framework},
+  year         = {2024},
+  url          = {https://site.mockito.org/},
+  note         = {Purpose: used for creating mock objects in tests},
+  keywords     = {tools}
+}
+
+@misc{mock_service_worker,
+  author       = {Mock Service Worker Team},
+  title        = {Mock Service Worker - API Mocking Library},
+  year         = {2024},
+  url          = {https://mswjs.io/},
+  note         = {Purpose: used to mock API calls during testing},
+  keywords     = {tools}
+}
+
+@misc{plantuml,
+  author       = {PlantUML Team},
+  title        = {PlantUML - Create UML Diagrams from Plain Text},
+  year         = {2024},
+  url          = {https://plantuml.com/},
+  note         = {Purpose: used to create UML diagrams throughout the documentation},
+  keywords     = {usedtools}
+}
+
 
 
