--- a/Latex/DD.tex
+++ b/Latex/DD.tex
@@ -27,7 +27,8 @@
 \usepackage{alloy-style}
 \setlength{\headheight}{13.6pt}
 
-
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}  % Includi fino a \paragraph nel sommario
 
 \begin{document}
 
@@ -106,6 +107,7 @@
     \section{Implementation, Integration and Test Plan}
     \label{sect:impinttest}
     \input{Latex/DD_Chapters/5imp_int_test}
+    
     %------------------------------------------------------------------------------------------------------------------------------------------------
     \clearpage
     \section{Effort Spent}
