--- a/Latex/DD_Chapters/6effort.tex
+++ b/Latex/DD_Chapters/6effort.tex
@@ -4,14 +4,15 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & X \\ \hline
-        Overall Description & X \\ \hline
-        Specific Requirements & X\\ \hline
-        Formal Analysis Using Alloy & X \\ \hline
-        Misc Activities & 5 \\ \hline
+        Introduction & 3 \\ \hline
+        Architectural Design & 20 \\ \hline
+        User Interface Design & 2 \\ \hline
+        Requirements Traceability & 1\\ \hline
+        Implementation, Integration, and Test Plan & 2 \\ \hline
+        Misc Activities & 15 \\ \hline
     \end{tabular}
     \caption{Effort - Lorenzo Ricci}
-    \label{tab:effotricci}
+    \label{tab:effortricci}
 \end{table}
 \subsection*{Matteo Giovanni Paoli}
 \begin{table}[H]
@@ -19,14 +20,15 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & X \\ \hline
-        Overall Description & X \\ \hline
-        Specific Requirements & X\\ \hline
-        Formal Analysis Using Alloy & X \\ \hline
-        Misc Activities & X \\ \hline
+        Introduction & 2 \\ \hline
+        Architectural Design & 24 \\ \hline
+        User Interface Design & 0.5 \\ \hline
+        Requirements Traceability & 8 \\ \hline
+        Implementation, Integration, and Test Plan & 4 \\ \hline
+        Misc Activities & 0 \\ \hline
     \end{tabular}
     \caption{Effort - Matteo Giovanni Paoli}
-    \label{tab:effotpaoli}
+    \label{tab:effortpaoli}
 \end{table}
 \subsection*{Samuele Grisoni}
 \begin{table}[H]
@@ -34,12 +36,13 @@
 \begin{tabular}{|l|c|}
         \hline
         \textbf{Section} & \textbf{Hours} \\ \hline
-        Introduction & X\\ \hline
-        Overall Description & X\\ \hline
-        Specific Requirements & X\\ \hline
-        Formal Analysis Using Alloy & X \\ \hline
-        Misc Activities & X\\ \hline
+        Introduction & 6 \\ \hline
+        Architectural Design & 20 \\ \hline
+        User Interface Design & 1 \\ \hline
+        Requirements Traceability & 1\\ \hline
+        Implementation, Integration, and Test Plan & 5 \\ \hline
+        Misc Activities & 3\\ \hline
     \end{tabular}
     \caption{Effort - Samuele Grisoni}
-    \label{tab:effotgrisoni}
+    \label{tab:effortgrisoni}
 \end{table}
